Removed them based on instruction

--- a/src/app/events/event-list.component.html
+++ b/src/app/events/event-list.component.html
@@ -3,6 +3,7 @@
     <hr/>
 
     <div class="well hoverwell thumbnail">
-        <event-thumbail [event] = "event1" (eventClick)="handleEventClickMe($event)"></event-thumbail>
+        <event-thumbail [event] = "event1"></event-thumbail>
+        <!-- <event-thumbail [event] = "event1" (eventClick)="handleEventClickMe($event)"></event-thumbail> -->
     </div>
 </div>
