--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -7,6 +7,6 @@
     <span>&nbsp;</span>
     <span>{{event.location.city}}, {{event.location.country}}.</span>
 </div>
-<button class="btn btn-primary" (click)= "handleClickMe()">
+<!-- <button class="btn btn-primary" (click)= "handleClickMe()">
     Click Me
-</button>
+</button> -->
