--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -4,8 +4,7 @@
 <div>Price: ${{event.price}}</div>
 <div>
     <span>Location: {{event.location.address}}</span>
-    <span>&nbsp;</span>
-    <span>{{event.location.city}}, {{event.location.country}}.</span>
+    <span class="pad-left">{{event.location.city}}, {{event.location.country}}.</span>
 </div>
 <!-- <button class="btn btn-primary" (click)= "handleClickMe()">
     Click Me
