Creates Nav Bar template

--- a/src/app/events/event-list.component.html
+++ b/src/app/events/event-list.component.html
@@ -3,6 +3,7 @@
     <hr/>
 
     <div class="well hoverwell thumbnail">
+        <navBar></navBar>
         <event-thumbail #thumbnail [event] = "event1"></event-thumbail>
         <!-- <event-thumbail [event] = "event1" (eventClick)="handleEventClickMe($event)"></event-thumbail> -->
         <!-- <h3>{{thumbnail.someProperty}}</h3>
