--- a/src/app/events/event-list.component.html
+++ b/src/app/events/event-list.component.html
@@ -1,10 +1,15 @@
+<div class="well hoverwell thumbnail">
+    <navBar></navBar>
+</div>
 <div>
     <h1>Upcoming Angular Events</h1>
     <hr/>
 
-    <div class="well hoverwell thumbnail">
-        <navBar></navBar>
-        <event-thumbail #thumbnail [event] = "event1"></event-thumbail>
+    <div class="row">
+        <div *ngFor="let event of events" class="col-md-5">
+            <event-thumbail class="well hoverwell thumbnail" [event] = "event"></event-thumbail>
+        </div>
+        
         <!-- <event-thumbail [event] = "event1" (eventClick)="handleEventClickMe($event)"></event-thumbail> -->
         <!-- <h3>{{thumbnail.someProperty}}</h3>
         <button (click)="thumbnail.logFoo()">
