--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -3,11 +3,11 @@
     <div>Date: {{event.date}}</div>
     <div>Time: {{event.time}}</div>
     <div>Price: ${{event.price}}</div>
-    <div *ngIf="event?.location">
+    <div [hidden]="!event?.location">
         <span>Location: {{event.location.address}}</span>
         <span class="pad-left">{{event.location.city}}, {{event.location.country}}.</span>
     </div>
-    <div *ngIf="event?.onlineURL">
+    <div [hidden]="!event?.onlineURL">
         <span>Online URL: {{event.onlineURL}}</span>
     </div>
     <!-- <button class="btn btn-primary" (click)= "handleClickMe()">
