--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -1,7 +1,7 @@
 <div class="well hoverwell thumbnail">
-    <h2 [class.even] = "event?.id % 2 === 0">{{event.name}}</h2>
+    <h2>{{event.name}}</h2>
     <div>Date: {{event.date}}</div>
-    <div [ngSwitch]="event?.time">
+    <div [ngSwitch]="event?.time" [ngClass]="getStartTimeClass()">
         Time: {{event.time}}
         <span *ngSwitchCase = "'8am'">(Early Start)</span>
         <span *ngSwitchCase = "'10am'">(Late Start)</span>
