--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -1,5 +1,5 @@
-<div>
-    <img [src]="event?.imageUrl" [alt]="event?.name">
+<div class="container">
+    <img class="event-image" [src]="event?.imageUrl" [alt]="event?.name">
   
     <div class="row">
       <div class="col-md-11">
@@ -21,5 +21,5 @@
         </address>
       </div>
     </div>
-</div>
+  </div>
   
