--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -21,5 +21,9 @@
         </address>
       </div>
     </div>
-  </div>
+    
+    <hr>
+    <session-list [sessions]="event?.sessions"></session-list>
+
+</div>
   
