--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -23,7 +23,21 @@
     </div>
     
     <hr>
-    <session-list [sessions]="event?.sessions"></session-list>
+    
+    <div class="row">
+      <div class="col-md-2">
+        <h3 style="margin: 0;">Sessions</h3>
+      </div>
 
+      <div class="col-md-2">
+        <a (click)="addSection()" *ngIf="!addMode">Add Session</a>
+      </div>
+    </div>
+    
+
+    <session-list *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
+    <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelAddSession)="cancelAddSession()"></create-session>
+    <!-- $event is the event itself. The event binding (someevent) allows to bind to DOM events and to EventEmitter events. The syntax is exactly the same. https://stackoverflow.com/questions/37944199/what-exactly-event-object-do-in-angular-2 -->
+ 
 </div>
   
