--- a/src/app/events/event-details/session-list.component.html
+++ b/src/app/events/event-details/session-list.component.html
@@ -1,13 +1,16 @@
 <div class="row" *ngFor="let session of sessions">
     <div class="col-md-10">
-      <!-- <div class="well"> -->
-        <component-well [title] = "session.name">
-          <!-- <h4></h4> -->
-          <h6>{{session.presenter}}</h6>
-          <span>Duration: {{session.duration}}</span><br />
-          <span>Level: {{session.level}}</span>
-          <p>{{session.abstract}}</p>
+        <component-well>
+          <div well-title>
+            {{session.name}}
+            <i *ngIf="session.voters.length > 3" class="glyphicon glyphicon-fire" style="color: red; padding:0;"></i>
+          </div>
+          <div well-body>
+            <h6>{{session.presenter}}</h6>
+            <span>Duration: {{session.duration}}</span><br />
+            <span>Level: {{session.level}}</span>
+            <p>{{session.abstract}}</p>
+          </div>
         </component-well>
-      <!-- </div> -->
     </div>
 </div>
