--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -1,13 +1,13 @@
 <div class="well hoverwell thumbnail" [routerLink]="['/events', event.id]">
-    <h2>{{event.name}}</h2>
+    <h2>{{event.name | uppercase}}</h2>
     <div>Date: {{event.date}}</div>
     <div [ngSwitch]="event?.time" [ngClass]="getStartTimeClass()">
-        Time: {{event.time}}
+        Time: {{event.time | date: 'shortDate'}}
         <span *ngSwitchCase = "'8am'">(Early Start)</span>
         <span *ngSwitchCase = "'10am'">(Late Start)</span>
         <span *ngSwitchDefault>(Normal Start)</span>
     </div>
-    <div>Price: ${{event.price}}</div>
+    <div>Price: {{event.price | currency: 'USD'}}</div>
     <div *ngIf ="event?.location">
         <span>Location: {{event.location.address}}</span>
         <span class="pad-left">{{event.location.city}}, {{event.location.country}}.</span>
