--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -28,14 +28,25 @@
       <div class="col-md-2">
         <h3 style="margin: 0;">Sessions</h3>
       </div>
-
+      <div class="col-md-7" style="margin-bottom: 10px;">
+        <div class="btn-group btn-group-sm">
+          <button class="btn btn-default" [class.active]="sortBy==='name'" (click)="sortBy='name'">Name</button>
+          <button class="btn btn-default" [class.active]="sortBy==='votes'" (click)="sortBy='votes'">Votes</button>
+        </div>
+        <div class="btn-group btn-group-sm">
+          <button class="btn btn-default" [class.active]="filterBy==='all'" (click)="filterBy='all'">All</button>
+          <button class="btn btn-default" [class.active]="filterBy==='beginner'" (click)="filterBy='beginner'">Beginner</button>
+          <button class="btn btn-default" [class.active]="filterBy==='intermediate'" (click)="filterBy='intermediate'">Intermediate</button>
+          <button class="btn btn-default" [class.active]="filterBy==='advanced'" (click)="filterBy='advanced'">Advanced</button>
+        </div>
+      </div>
       <div class="col-md-2">
         <a (click)="addSection()" *ngIf="!addMode">Add Session</a>
       </div>
     </div>
     
 
-    <session-list *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
+    <session-list *ngIf="!addMode" [filterBy]="filterBy" [sortBy]="sortBy" [sessions]="event?.sessions"></session-list>
     <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelAddSession)="cancelAddSession()"></create-session>
     <!-- $event is the event itself. The event binding (someevent) allows to bind to DOM events and to EventEmitter events. The syntax is exactly the same. https://stackoverflow.com/questions/37944199/what-exactly-event-object-do-in-angular-2 -->
  
