--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -30,11 +30,11 @@
             </li>
           </ul>
         </div>
-        <form id="searchForm" class="navbar-form navbar-right">
+        <form id="searchForm" (ngSubmit)="searchSession(searchTerm)" class="navbar-form navbar-right">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search Sessions" >
+            <input type="text" [(ngModel)]="searchTerm" name="searchTerm" class="form-control" placeholder="Search Sessions" required='true'>
           </div>
-          <button class="btn btn-default" >
+          <button class="btn btn-default" type="submit">
             Search
           </button>
         </form>
