--- a/src/app/common/simpleModel.component.html
+++ b/src/app/common/simpleModel.component.html
@@ -1,6 +1,6 @@
-<div id="simple-modal" class="modal fade" tabindex="-1">
-    <div class="modal dialog">
-        <div class="modal content">
+<div id="{{elementId}}" class="modal fade" tabindex="-1">
+    <div class="modal dialog" style="display: block">
+        <div class="modal content" style="display: block; width: 800px;margin: auto; height:500px; overflow: hidden;">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">
                     <span>&times;</span>
