--- a/src/app/events/event-details/session-list.component.html
+++ b/src/app/events/event-details/session-list.component.html
@@ -1,16 +1,19 @@
 <div class="row" *ngFor="let session of visibleSessions">
-    <div class="col-md-10">
-        <component-well>
-          <div well-title>
-            {{session.name}}
-            <i *ngIf="session.voters.length > 3" class="glyphicon glyphicon-fire" style="color: red; padding:0;"></i>
-          </div>
-          <div well-body>
-            <h6>{{session.presenter}}</h6>
-            <span>Duration: {{session.duration | duration}}</span><br />
-            <span>Level: {{session.level}}</span>
-            <p>{{session.abstract}}</p>
-          </div>
-        </component-well>
-    </div>
+  <div class="col-md-1">
+    <upvote (vote) = "toggleVote(session)" [count]="session.voters.length" [voted]="userHasVoted(session)"></upvote>
+  </div>
+  <div class="col-md-10">
+      <component-well>
+        <div well-title>
+          {{session.name}}
+          <i *ngIf="session.voters.length > 3" class="glyphicon glyphicon-fire" style="color: red; padding:0;"></i>
+        </div>
+        <div well-body>
+          <h6>{{session.presenter}}</h6>
+          <span>Duration: {{session.duration | duration}}</span><br />
+          <span>Level: {{session.level}}</span>
+          <p>{{session.abstract}}</p>
+        </div>
+      </component-well>
+  </div>
 </div>
