--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -29,11 +29,11 @@
         <h3 style="margin: 0;">Sessions</h3>
       </div>
       <div class="col-md-7" style="margin-bottom: 10px;">
-        <div class="btn-group btn-group-sm">
+        <div class="btn-group btn-group-sm" style="margin: 10px;">
           <button class="btn btn-default" [class.active]="sortBy==='name'" (click)="sortBy='name'">Name</button>
           <button class="btn btn-default" [class.active]="sortBy==='votes'" (click)="sortBy='votes'">Votes</button>
         </div>
-        <div class="btn-group btn-group-sm">
+        <div class="btn-group btn-group-sm" style="margin: 10px;">
           <button class="btn btn-default" [class.active]="filterBy==='all'" (click)="filterBy='all'">All</button>
           <button class="btn btn-default" [class.active]="filterBy==='beginner'" (click)="filterBy='beginner'">Beginner</button>
           <button class="btn btn-default" [class.active]="filterBy==='intermediate'" (click)="filterBy='intermediate'">Intermediate</button>
