--- a/src/app/events/create-event.component.html
+++ b/src/app/events/create-event.component.html
@@ -22,9 +22,10 @@
       <em *ngIf="newEventForm.controls.price?.invalid && (newEventForm.controls.price?.touched)">Required</em>
       <input (ngModel)="newEvent.price" name="price" required id="eventPrice" type="text" type="number" class="form-control" placeholder="event price..." />
     </div>
-    <div ngModelGroup = 'location'>
+    <div ngModelGroup = 'location' #locationGroup="ngModelGroup" validateLocation>
         <div class="form-group">
         <label for="address">Event Location:</label>
+        <em *ngIf="locationGroup?.invalid && locationGroup?.touched">You must enter either the full address or an online URL</em>
         <input (ngModel)="newEvent.address" name="address" id="address" type="text" class="form-control" placeholder="Address of event..." />
         </div>
         <div class="row">
@@ -39,7 +40,7 @@
 
     <div class="form-group">
       <label for="onlineUrl">Online Url:</label>
-      <input (ngModel)="newEvent.onlineUrl" name="onlineUrl" id="onlineUrl" type="text" class="form-control" placeholder="Online Url..." />
+      <input (ngModel)="newEvent.onlineUrl" name="onlineUrl" id="onlineUrl" type="text" class="form-control" placeholder="Online Url..." (change) = "locationGroup.control.controls.address.updateValueAndValidity()"/>
     </div>
     <div class="form-group" [ngClass]="{'error': newEventForm.controls.imageUrl?.invalid && newEventForm.controls.imageUrl?.touched}">
       <label for="imageUrl">Image:</label>
@@ -49,7 +50,7 @@
       <img *ngIf="newEventForm.controls.imageUrl?.valid" [src]= "newEventForm.controls.imageUrl.value"/>
     </div>
     
-    <button type="submit" *ngIf="newEventForm.valid" class="btn btn-primary">Save</button>
+    <button type="submit" [disabled]="newEventForm.invalid" class="btn btn-primary">Save</button>
     <button type="button" class="btn btn-default" (click)="cancel()">Cancel</button>
   </form>
 </div>
